Fixed background image not showing in portlets.

--- a/icefaces/trunk/icefaces/samples/component-showcase2/common-web/css/showcase_style.css
+++ b/icefaces/trunk/icefaces/samples/component-showcase2/common-web/css/showcase_style.css
@@ -425,6 +425,7 @@ a.navNodeFoldertrueExpandedtrue, a.navNodeFoldertrueExpandedtrue:hover{
     margin: 15px;
     width: 125px;
     height: 80px;
+    background:url('../images/effect_gradient.gif') bottom left repeat-x;
 }
 .effectsDemoContainer{
     float:left;        
